--- a/css/global.css
+++ b/css/global.css
@@ -130,7 +130,9 @@ footer {
 @media (min-width: 768px) {
     /* header   */
     header {
-        padding: 60px 98px; 
+        padding: 60px 0;
+        width: 75%;
+        margin: 0 auto;
         position: static;
     }
 
@@ -216,9 +218,11 @@ footer {
 
 /* desktop styles */
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
     header {
-        
+        width: 90%;
+        margin: 0 auto;
+        border: 1px solid red;
     }
-    
+     */
 }
